--- a/.jaredrc
+++ b/.jaredrc
@@ -54,6 +54,8 @@ alias gap='git add -p'
 alias gb='git branch'
 alias gc='git commit -v'
 alias gca='git commit -a -v'
+alias gco='git checkout'
+alias gcob='git checkout -b'
 alias gd='git diff'
 alias gdc='git diff --cached'
 alias gdh='git diff HEAD'
@@ -68,4 +70,5 @@ alias gr='git rebase'
 alias grc='git rebase --continue'
 alias gra='git rebase --abort'
 alias reset-authors='git commit --amend --reset-author -C HEAD'
-alias vi='vim'
+alias vi='gvim'
+alias vim='gvim'
