add deb package reference, apt alias

--- a/.jaredrc
+++ b/.jaredrc
@@ -72,3 +72,4 @@ alias gra='git rebase --abort'
 alias reset-authors='git commit --amend --reset-author -C HEAD'
 alias vi='gvim'
 alias vim='gvim'
+alias apts='apt-cache search --names-only'
