--- a/.jaredrc
+++ b/.jaredrc
@@ -70,3 +70,4 @@ alias gr='git rebase'
 alias grc='git rebase --continue'
 alias gra='git rebase --abort'
 alias reset-authors='git commit --amend --reset-author -C HEAD'
+alias blender=/Applications/Blender/blender.app/Contents/MacOS/blender
